test/integration/bad/new/bad_decl_in_functions.stan
// TODO: would be nice to specialize for this mistake
functions { real x = 3; }
